# coral-ai

./: .gitignore  README.md
.github/workflows/: context-prep-ci.yml
cli/: .gitignore  README.md  __init__.py  api.py  app.py  pyproject.toml  runner.py  s3.py  tui.py
cli/commands/: connect.py  connections.py  login.py  sources.py  sync.py
cli/scripts/: regen_logo.sh
cli/tests/: test_commands.py  test_runner.py  test_sync_command.py
context_prep/: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  artifact.py  cleaners.py  joiners.py  pyproject.toml  recipe.py  verbs.py
context_prep/chunkers/: __init__.py  fixed_token.py  recursive_character.py  sentence.py  sliding_token.py
context_prep/coralbricks/context_prep/: __init__.py  _records.py  artifact.py  cleaners.py  joiners.py  recipe.py  verbs.py
context_prep/coralbricks/context_prep/chunkers/: __init__.py  _tokens.py  base.py  fixed_token.py  recursive_character.py  sentence.py  sliding_token.py
context_prep/coralbricks/context_prep/embedders/: __init__.py  _env.py  base.py  bedrock_embedder.py  coral_embedder.py  coral_gateway_embedder.py  deepinfra_embedder.py  embedder_factory.py  openai_embedder.py  parquet.py  sentence_transformer_embedder.py
context_prep/coralbricks/context_prep/enrichers/: __init__.py  base.py  pipeline.py  regex_extractors.py  spacy_extractor.py
context_prep/coralbricks/context_prep/graph/: __init__.py  hydrate.py  triples.py
context_prep/docs/: ARCHITECTURE.md  EXTENDING.md  TUTORIAL_EMBEDDED_RAG.md
context_prep/embedders/: __init__.py  _env.py  base.py  bedrock_embedder.py  coral_embedder.py  coral_gateway_embedder.py  deepinfra_embedder.py  embedder_factory.py  openai_embedder.py  parquet.py  sentence_transformer_embedder.py
context_prep/enrichers/: base.py  spacy_extractor.py
context_prep/examples/: airbyte_rag.py  distributed_hydrate.py  embedded_rag_duckdb.py  knowledge_graph.py  rag_quickstart.py
context_prep/tests/: test_chunkers.py  test_cleaners.py  test_embedders.py  test_enrichers.py  test_joiners_graph.py  test_prep.py
event_scout/: README.md  event_scout.py
integrations/airbyte/: CHANGELOG.md  README.md  __init__.py  pyproject.toml  reader.py
integrations/airbyte/examples/: quickstart.py
integrations/airbyte/tests/: test_reader.py
integrations/connectors/: CHANGELOG.md  README.md  __init__.py  pyproject.toml
integrations/connectors/airbyte/: README.md  __init__.py
integrations/connectors/airbyte/examples/: quickstart.py
integrations/connectors/airbyte/tests/: test_reader.py
integrations/connectors/airbyte/tests/fixtures/: items.jsonl  stories.jsonl  stories_20260420_00001.jsonl
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/src/coralbricks_crewai/: __init__.py  client.py  memory.py  tools.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/src/coralbricks_langchain/: __init__.py  chat_history.py  client.py  memory.py  retriever.py  tools.py
integrations/openclaw/skills/persistent-agent-memory/scripts/: coral_delete_matching  coral_retrieve  coral_store
multi-source-retrieval/: README.md  pyproject.toml
multi-source-retrieval/examples/: local_orchestration.py
multi-source-retrieval/src/coral_retrieval/: __init__.py  orchestrator.py  types.py
multi-source-retrieval/src/coral_retrieval/backends/: __init__.py  base.py  graph.py  in_memory_vector.py  opensearch_keyword.py  opensearch_vector.py  sql.py
multi-source-retrieval/src/coral_retrieval/fusion/: __init__.py  rrf.py  wsf.py
multi-source-retrieval/tests/: test_fusion.py  test_orchestrator.py  test_types.py
py-gpu-inference/: README.md  __init__.py  batcher.py  control_tokens.py  grpc_server.py  inference_pb2.py  inference_pb2_grpc.py  metrics.py  model_downloader.py  model_loader.py  models.py  pyproject.toml  requirements.txt  test_client.py
py-gpu-inference/coral_gpu_inference/: __init__.py  backpressure.py  config.py  gpu_worker.py  inference.proto  output_notifier.py  test_client.py
python-cli/: README.md  app.py  config.py  logo.py  oauth.py  pyproject.toml  tui.py
python-cli/commands/: connect.py  connections.py  disconnect.py  login.py  runs.py  sources.py  status.py  sync.py
python-cli/scripts/: regen_logo.sh
python-cli/tests/: test_commands.py  test_config.py  test_connect.py  test_disconnect_command.py  test_sync_command.py
sandbox-runtime/: README.md  pyproject.toml
sandbox-runtime/src/coralbricks/sandbox/: __init__.py  _rpc.py  cancel_event.py  llm.py  py_executor.py  tools.py
sandbox-runtime/tests/: conftest.py  test_helpers.py  test_py_executor.py  test_rpc.py  test_tools_py.py
sync-core/: README.md  pyproject.toml
sync-core/coralbricks/sync_core/: __init__.py  runner.py  s3.py
sync-core/tests/: test_runner.py
