[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks"
version = "0.1.3"
description = "Coral Bricks CLI — connect data sources and run syncs locally into managed storage."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Coral Bricks AI", email = "eng@coralbricks.ai"},
]
keywords = [
    "cli",
    "data-integration",
    "connectors",
    "rag",
    "etl",
    "coralbricks",
    "ai",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "requests>=2.32.2",  # CVE-2024-35195
    "platformdirs>=4.0",
    "boto3>=1.34",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
    "responses>=0.25",
]

[project.scripts]
coralbricks = "coralbricks.cli.app:main"

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Repository = "https://github.com/Coral-Bricks-AI/coral-ai"
Issues = "https://github.com/Coral-Bricks-AI/coral-ai/issues"
Documentation = "https://github.com/Coral-Bricks-AI/coral-ai/tree/main/cli#readme"
Changelog = "https://github.com/Coral-Bricks-AI/coral-ai/blob/main/cli/CHANGELOG.md"

# Flat source layout under the shared `coralbricks.*` PEP 420 namespace,
# matching `coralbricks-context-prep` and `coralbricks-airbyte`. The CLI
# package installs to `coralbricks.cli.*` so all OSS distributions share
# the same namespace.
[tool.setuptools]
packages = [
    "coralbricks.cli",
    "coralbricks.cli.commands",
]

[tool.setuptools.package-dir]
"coralbricks.cli" = "."
"coralbricks.cli.commands" = "commands"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802", "N806"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
