[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks-context-prep"
version = "0.1.0"
description = "Build-time context preparation for agentic AI: clean, chunk, embed, enrich, hydrate. No orchestrator, no parser layer — just primitives over records."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Coral Bricks AI", email = "eng@coralbricks.ai"},
]
keywords = [
    "rag",
    "embeddings",
    "chunking",
    "context",
    "agents",
    "ai",
    "knowledge-graph",
    "vector-search",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
# Token-aware chunkers prefer tiktoken for accurate token counts.
chunkers = ["tiktoken>=0.7"]

# HTML cleaner.
cleaners = ["trafilatura>=1.8"]

# Optional NER via spaCy. The spaCy model is user-supplied.
enrichers-spacy = ["spacy>=3.7"]

# Knowledge-graph parquet output.
graph = ["pyarrow>=14"]

# API-backed embedders (OpenAI, Coral, CoralGateway, DeepInfra).
embed-api = [
    "openai>=1.0",
    "requests>=2.31",
]
embed-bedrock = ["boto3>=1.34"]
embed-st = [
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "numpy>=1.26",
    "tqdm>=4.66",
]

# Convenience: install everything.
all = [
    "tiktoken>=0.7",
    "trafilatura>=1.8",
    "spacy>=3.7",
    "pyarrow>=14",
    "openai>=1.0",
    "requests>=2.31",
    "boto3>=1.34",
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "numpy>=1.26",
    "tqdm>=4.66",
]

dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
    "mypy>=1.10",
    "tiktoken>=0.7",
    "trafilatura>=1.8",
]

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Repository = "https://github.com/Coral-Bricks-AI/coral-ai"
Issues = "https://github.com/Coral-Bricks-AI/coral-ai/issues"
Documentation = "https://github.com/Coral-Bricks-AI/coral-ai/tree/main/context_prep#readme"
Changelog = "https://github.com/Coral-Bricks-AI/coral-ai/blob/main/context_prep/CHANGELOG.md"

# The project root *is* the package root. `import context_prep` maps to
# this directory; subpackages map to sibling dirs (`./chunkers`, etc.).
[tool.setuptools]
packages = [
    "context_prep",
    "context_prep.chunkers",
    "context_prep.embedders",
    "context_prep.enrichers",
    "context_prep.graph",
]

[tool.setuptools.package-dir]
context_prep = "."
"context_prep.chunkers" = "chunkers"
"context_prep.embedders" = "embedders"
"context_prep.enrichers" = "enrichers"
"context_prep.graph" = "graph"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802", "N806"]
# Public exception name; renaming is a breaking API change.
"cleaners.py" = ["N818"]
# Legacy embedder file: torch convention for `import torch.nn.functional as F`,
# guarded top-level imports, and pre-existing style choices we don't want to
# churn for the 0.1.0 cut.
"embedders/sentence_transformer_embedder.py" = [
    "E402",
    "N812",
    "SIM105",
    "UP022",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
