[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks-sandbox-runtime"
version = "0.1.1"
description = "In-sandbox shim for Coral Bricks pipelines: thin RPC clients to the gateway's tool kernel and LLM proxy. Pre-installed in every per-pipeline venv. Stdlib-only."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Coral Bricks AI", email = "eng@coralbricks.ai"},
]
keywords = [
    "coralbricks",
    "sandbox",
    "ipc",
    "rpc",
    "agents",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX",
]
# Stdlib only -- this package is installed into every pipeline venv;
# every dep here would balloon the cold-start install time and the
# attack surface inside the sandbox. Keep it that way.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Repository = "https://github.com/Coral-Bricks-AI/coral-ai"

# src/ layout: the importable ``coralbricks.sandbox`` package lives
# under ``src/coralbricks/sandbox/``. ``coralbricks`` itself is left
# as an implicit PEP 420 namespace package so other OSS distributions
# (``coralbricks-context-prep``, ...) and the closed-source
# ``coralbricks-platform`` SDK can contribute their own subpackages.
[tool.setuptools.packages.find]
where = ["src"]
include = ["coralbricks.sandbox*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
