[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks-sync-core"
version = "0.1.0"
description = "Coral Bricks Airbyte sync core — Docker runner + S3 envelope writer shared by the CLI and the ECS supervisor."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Coral Bricks AI", email = "eng@coralbricks.ai"},
]
keywords = [
    "airbyte",
    "data-integration",
    "connectors",
    "etl",
    "coralbricks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Repository = "https://github.com/Coral-Bricks-AI/coral-ai"
Issues = "https://github.com/Coral-Bricks-AI/coral-ai/issues"

# Flat source layout under the shared `coralbricks.*` PEP 420 namespace,
# matching the sibling `coralbricks` (python-cli), `coralbricks-context-prep`,
# and `coralbricks-airbyte` packages. Installs to `coralbricks.sync_core.*`.
[tool.setuptools]
packages = [
    "coralbricks.sync_core",
]

[tool.setuptools.package-dir]
"coralbricks.sync_core" = "coralbricks/sync_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802", "N806"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
