[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks-connectors"
version = "0.2.0"
description = "Data connectors for Coral Bricks: readers and ingestion helpers that turn external-source exports (Airbyte, PyAirbyte, …) into coralbricks.context_prep records."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Coral Bricks AI", email = "eng@coralbricks.ai"},
]
keywords = [
    "airbyte",
    "connectors",
    "rag",
    "etl",
    "coralbricks",
    "data-integration",
    "ai",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Repository = "https://github.com/Coral-Bricks-AI/coral-ai"
Issues = "https://github.com/Coral-Bricks-AI/coral-ai/issues"
Documentation = "https://github.com/Coral-Bricks-AI/coral-ai/tree/main/integrations/connectors#readme"
Changelog = "https://github.com/Coral-Bricks-AI/coral-ai/blob/main/integrations/connectors/CHANGELOG.md"

# Flat source layout under the shared `coralbricks.*` PEP 420 namespace,
# matching `coralbricks-context-prep`. Each connector lives in its own
# subdirectory and maps to a subpackage of `coralbricks.connectors`.
[tool.setuptools]
packages = [
    "coralbricks.connectors",
    "coralbricks.connectors.airbyte",
]

[tool.setuptools.package-dir]
"coralbricks.connectors" = "."
"coralbricks.connectors.airbyte" = "airbyte"

[tool.pytest.ini_options]
testpaths = ["airbyte/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
