[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks-crewai"
version = "0.2.0"
description = "CoralBricks + CrewAI integration: client, memory helper, and tools."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Coral Bricks AI", email = "eng@coralbricks.ai" },
]
keywords = ["crewai", "memory", "coralbricks", "embeddings", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "crewai>=1.10.0",
    "crewai-tools>=0.1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
