[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralbricks-langchain"
version = "0.2.0"
description = "CoralBricks + LangChain integration: retriever, chat history, memory helper, and agent tools."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Coral Bricks AI", email = "eng@coralbricks.ai" },
]
keywords = ["langchain", "memory", "coralbricks", "embeddings", "agents", "rag", "retriever"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
